force-app/main/default/objects/Saisie_de_temps__c/Saisie_de_temps__c.object-meta.xml
<CustomObject>
    <label>Saisie de temps</label>
    <nameField>
        <displayFormat>SDT-{0000}</displayFormat>
        <label>Saissie de  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saisie de temps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>