force-app/main/default/objects/Saisie_de_temps__c/fields/Feuille_de_temps__c.field-meta.xml
<CustomField>
    <fullName>Feuille_de_temps__c</fullName>
    <label>Feuille de temps</label>
    <referenceTo>Intervalle_de_temps__c</referenceTo>
    <relationshipLabel>Saisie de temps</relationshipLabel>
    <relationshipName>Saisie_de_temps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>