force-app/main/default/objects/Saisie_de_temps__c/fields/Heure_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_fin__c</fullName>
    <label>Heure de fin</label>
    <type>DateTime</type>
</CustomField>